# mlops-e2e

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  tests.yaml
infra/terraform/compositions/envs/dev/: backend.tf  dev.auto.tfvars  main.tf
infra/terraform/compositions/envs/prod/: backend.tf  main.tf  prod.auto.tfvars
infra/terraform/compositions/envs/staging/: backend.tf  main.tf  staging.auto.tfvars  variables.tf
infra/terraform/modules/aws/external_bucket/: iam.tf  providers.tf  variables.tf
infra/terraform/modules/aws/secretsmanager/: iam.tf  variables.tf
infra/terraform/modules/databricks/: secrets.tf  unity_catalog.tf  variables.tf
infra/terraform/modules/databricks/catalog/: main.tf  variables.tf
infra/terraform/modules/databricks/external_location/: main.tf  providers.tf  variables.tf
src/mlops_e2e/: spark.py
tests/unit/: test_smoke.py
