[project]
name = "mlops-e2e"
version = "0.1.0"
description = "MLOps E2E project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pyspark>=3.5,<3.6",
  "delta-spark==3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "black>=24.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_e2e"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-q", "--color=yes"]

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = [
  "/.venv",
  "/build",
  "/dist",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
