[project]
name = "mlops-e2e"
version = "0.1.0"
description = "MLOps E2E project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  # Target the latest 17.0.x compatible release
  "databricks-connect~=17.0.0",
  # Specific to Databricks Runtime
  "boto3==1.36.2",
  # Other dependencies
  "kaggle>=1.7",
  "openaq>=0.4.0",
  "PyYAML>=6.0.2",
  "shapely>=2.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "black>=24.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
local = [
  # For true local Spark runs (not Databricks Connect)
  "pyspark~=4.0.0",
  "delta-spark==4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_e2e"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-q", "--color=yes", "--cov=src/mlops_e2e", "--cov-report=term-missing"]

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '(^\\.venv/|^build/|^dist/)'

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
